--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-In this repoitory, you will find different routines used for the analysis of spacecraft in-situ data measurement along with different bow shock and magnetopause models
+In this repository, you will find different routines used for the analysis of spacecraft in-situ data measurement along with different bow shock and magnetopause models
